# vid-grabber

./: Cargo.toml
.cargo/: config
src/: main.rs  vid_struct.rs
src/utils/: mod.rs
