[package]
name = "vid-grabber"
version = "0.1.0"
authors = ["Ziyan \"Jerry\" Chen <jerryc443@gmail.com>"]
edition = "2018"
description = "A Tiny Video Grabber."
#documentation = "https://docs.rs/???"
readme = "README.md"
#homepage = "https://???.rs/"
repository = "https://github.com/jerryc05/vid-grabber"
license = "GPL-3.0-or-later"
keywords = ["youtube"]
categories = [
    "command-line-utilities"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_req = "^0.7"
regex = "^1.3.9"
lazy_static = "^1.4"
serde_json = "^1"


[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
